force-app/main/default/objects/Email_Control__mdt/Email_Control__mdt.object-meta.xml
<CustomObject>
    <description>Metadata that decides whether email of a given type are sent out or not.</description>
    <label>Email Control</label>
    <pluralLabel>Email Controls</pluralLabel>
</CustomObject>