force-app/main/default/objects/Email_Control__mdt/fields/Email_Class__c.field-meta.xml
<CustomField>
    <fullName>Email_Class__c</fullName>
    <description>Type of the email which is being controlled by this metadata object.</description>
    <label>Email Class</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>