force-app/main/default/objects/Email_Control__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field which dictates whether this email type should be sent out or not.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>