force-app/main/default/objects/Email_Control__mdt/fields/Templates__c.field-meta.xml
<CustomField>
    <fullName>Templates__c</fullName>
    <description>Just a list of all the email template names that this field controls.  Doesn&#39;t do anything programmatically.</description>
    <label>Templates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>