force-app/main/default/objects/Email_Control__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Templates__c</columns>
    <columns>IsActive__c</columns>
    <columns>Email_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>